--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -33,7 +33,7 @@
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
     	<version>4.3.6.RELEASE</version>
-    </dependency>
+    </dependency>    
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-aop</artifactId>
@@ -43,6 +43,16 @@
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-jdbc</artifactId>
+    	<version>4.3.6.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.h2database</groupId>
+    	<artifactId>h2</artifactId>
+    	<version>1.4.193</version>
     </dependency>
   </dependencies>
   <build>
