--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -40,6 +40,12 @@
     	<version>4.3.6.RELEASE</version>
     </dependency>
     <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.8.5</version>
+        <scope>compile</scope>
+    </dependency>    
+    <dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
