--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -60,6 +60,17 @@
     	<artifactId>h2</artifactId>
     	<version>1.4.193</version>
     </dependency>
+    <dependency>
+    	<groupId>org.hamcrest</groupId>
+    	<artifactId>hamcrest-all</artifactId>
+    	<version>1.3</version>
+    </dependency>
+	<!-- for json .andExpect(jsonPath("$.id", hasSize(2))) -->
+	<dependency>
+	    <groupId>com.jayway.jsonpath</groupId>
+	    <artifactId>json-path</artifactId>
+	    <version>2.2.0</version>
+	</dependency>    
   </dependencies>
   <build>
     <finalName>SpringRest1</finalName>
