--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -70,7 +70,14 @@
 	    <groupId>com.jayway.jsonpath</groupId>
 	    <artifactId>json-path</artifactId>
 	    <version>2.2.0</version>
-	</dependency>    
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+		
   </dependencies>
   <build>
     <finalName>SpringRest1</finalName>
