Security -> CSFR disabled, more logs, main.html added (for later usage)

--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -77,7 +77,17 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
 	</dependency>
-		
+
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-web</artifactId>
+		<version>4.2.1.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-config</artifactId>
+		<version>4.2.1.RELEASE</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>SpringRest1</finalName>
