Now it handle preflight requests coming from local file browser.
Cross-Origin added for POST in order to handle preflight requests coming
from local file browser.
Car changed to use Apache's equals and hashcode buidlers.

--- a/SpringRest1/pom.xml
+++ b/SpringRest1/pom.xml
@@ -88,6 +88,11 @@
 		<artifactId>spring-security-config</artifactId>
 		<version>4.2.1.RELEASE</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.5</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>SpringRest1</finalName>
